// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayRelayDirectiveTransform matches expected output: plural-fragment.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment PluralFragment on User @relay(plural: true) {
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "kind": "Fragment",
  "directives": [],
  "loc": {
    "kind": "Source",
    "start": 0,
    "end": 63,
    "source": {
      "body": "fragment PluralFragment on User @relay(plural: true) {\\n  name\\n}\\n",
      "name": "GraphQL request",
      "locationOffset": {
        "line": 1,
        "column": 1
      }
    }
  },
  "metadata": {
    "plural": true
  },
  "name": "PluralFragment",
  "selections": [
    {
      "kind": "ScalarField",
      "alias": "name",
      "args": [],
      "directives": [],
      "loc": {
        "kind": "Source",
        "start": 57,
        "end": 61,
        "source": {
          "body": "fragment PluralFragment on User @relay(plural: true) {\\n  name\\n}\\n",
          "name": "GraphQL request",
          "locationOffset": {
            "line": 1,
            "column": 1
          }
        }
      },
      "metadata": null,
      "name": "name",
      "type": "String"
    }
  ],
  "type": "User",
  "argumentDefinitions": []
}
`;

exports[`RelayRelayDirectiveTransform matches expected output: unmasked-spread.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment UserProfile on User {
  profilePicture {
    ...PhotoFragment @relay(mask: false)
  }
}

fragment PhotoFragment on Image {
  uri
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "kind": "Fragment",
  "directives": [],
  "loc": {
    "kind": "Source",
    "start": 0,
    "end": 96,
    "source": {
      "body": "fragment UserProfile on User {\\n  profilePicture {\\n    ...PhotoFragment @relay(mask: false)\\n  }\\n}\\n\\nfragment PhotoFragment on Image {\\n  uri\\n}\\n",
      "name": "GraphQL request",
      "locationOffset": {
        "line": 1,
        "column": 1
      }
    }
  },
  "metadata": null,
  "name": "UserProfile",
  "selections": [
    {
      "kind": "LinkedField",
      "alias": "profilePicture",
      "args": [],
      "connection": false,
      "directives": [],
      "loc": {
        "kind": "Source",
        "start": 33,
        "end": 94,
        "source": {
          "body": "fragment UserProfile on User {\\n  profilePicture {\\n    ...PhotoFragment @relay(mask: false)\\n  }\\n}\\n\\nfragment PhotoFragment on Image {\\n  uri\\n}\\n",
          "name": "GraphQL request",
          "locationOffset": {
            "line": 1,
            "column": 1
          }
        }
      },
      "metadata": null,
      "name": "profilePicture",
      "selections": [
        {
          "kind": "FragmentSpread",
          "args": [],
          "metadata": {
            "mask": false
          },
          "loc": {
            "kind": "Source",
            "start": 54,
            "end": 90,
            "source": {
              "body": "fragment UserProfile on User {\\n  profilePicture {\\n    ...PhotoFragment @relay(mask: false)\\n  }\\n}\\n\\nfragment PhotoFragment on Image {\\n  uri\\n}\\n",
              "name": "GraphQL request",
              "locationOffset": {
                "line": 1,
                "column": 1
              }
            }
          },
          "name": "PhotoFragment",
          "directives": []
        }
      ],
      "type": "Image"
    }
  ],
  "type": "User",
  "argumentDefinitions": []
}
{
  "kind": "Fragment",
  "directives": [],
  "loc": {
    "kind": "Source",
    "start": 98,
    "end": 139,
    "source": {
      "body": "fragment UserProfile on User {\\n  profilePicture {\\n    ...PhotoFragment @relay(mask: false)\\n  }\\n}\\n\\nfragment PhotoFragment on Image {\\n  uri\\n}\\n",
      "name": "GraphQL request",
      "locationOffset": {
        "line": 1,
        "column": 1
      }
    }
  },
  "metadata": null,
  "name": "PhotoFragment",
  "selections": [
    {
      "kind": "ScalarField",
      "alias": "uri",
      "args": [],
      "directives": [],
      "loc": {
        "kind": "Source",
        "start": 134,
        "end": 137,
        "source": {
          "body": "fragment UserProfile on User {\\n  profilePicture {\\n    ...PhotoFragment @relay(mask: false)\\n  }\\n}\\n\\nfragment PhotoFragment on Image {\\n  uri\\n}\\n",
          "name": "GraphQL request",
          "locationOffset": {
            "line": 1,
            "column": 1
          }
        }
      },
      "metadata": null,
      "name": "uri",
      "type": "String"
    }
  ],
  "type": "Image",
  "argumentDefinitions": []
}
`;
